// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCardMenu render show dropdown hide unenroll item and disable email snapshot 1`] = `
<Fragment>
  <Dropdown
    onToggle={[MockFunction hooks.handleToggleDropdown]}
  >
    <Dropdown.Toggle
      alt="Course actions dropdown"
      as="IconButton"
      iconAs="Icon"
      id="course-actions-dropdown-test-card-id"
      src={[MockFunction icons.MoreVert]}
      variant="primary"
    />
    <Dropdown.Menu>
      <SocialShareMenu
        cardId="test-card-id"
        emailSettings={
          Object {
            "hide": [MockFunction emailSettingHide],
            "isVisible": false,
            "show": [MockFunction emailSettingShow],
          }
        }
      />
    </Dropdown.Menu>
  </Dropdown>
  <UnenrollConfirmModal
    cardId="test-card-id"
    closeModal={[MockFunction unenrollHide]}
    show={false}
  />
</Fragment>
`;

exports[`CourseCardMenu render show dropdown show unenroll and enable email snapshot 1`] = `
<Fragment>
  <Dropdown
    onToggle={[MockFunction hooks.handleToggleDropdown]}
  >
    <Dropdown.Toggle
      alt="Course actions dropdown"
      as="IconButton"
      iconAs="Icon"
      id="course-actions-dropdown-test-card-id"
      src={[MockFunction icons.MoreVert]}
      variant="primary"
    />
    <Dropdown.Menu>
      <Dropdown.Item
        data-testid="unenrollModalToggle"
        disabled={false}
        onClick={[MockFunction unenrollShow]}
      >
        Unenroll
      </Dropdown.Item>
      <SocialShareMenu
        cardId="test-card-id"
        emailSettings={
          Object {
            "hide": [MockFunction emailSettingHide],
            "isVisible": false,
            "show": [MockFunction emailSettingShow],
          }
        }
      />
    </Dropdown.Menu>
  </Dropdown>
  <UnenrollConfirmModal
    cardId="test-card-id"
    closeModal={[MockFunction unenrollHide]}
    show={false}
  />
  <EmailSettingsModal
    cardId="test-card-id"
    closeModal={[MockFunction emailSettingHide]}
    show={false}
  />
</Fragment>
`;
